// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`meSchema empty 1`] = `
Object {
  "errors": Array [
    Object {
      "instancePath": "",
      "keyword": "required",
      "message": "must have required property 'user'",
      "params": Object {
        "missingProperty": "user",
      },
      "schemaPath": "#/required",
    },
  ],
  "schema": "#/components/schemas/meSchema",
}
`;

exports[`meSchema missing permissions 1`] = `
Object {
  "errors": Array [
    Object {
      "instancePath": "",
      "keyword": "required",
      "message": "must have required property 'permissions'",
      "params": Object {
        "missingProperty": "permissions",
      },
      "schemaPath": "#/required",
    },
  ],
  "schema": "#/components/schemas/meSchema",
}
`;

exports[`meSchema missing splash 1`] = `
Object {
  "errors": Array [
    Object {
      "instancePath": "",
      "keyword": "required",
      "message": "must have required property 'splash'",
      "params": Object {
        "missingProperty": "splash",
      },
      "schemaPath": "#/required",
    },
  ],
  "schema": "#/components/schemas/meSchema",
}
`;
